# character_classifier

backend/: app_meta.json  best_model.h5  char_model.h5  check_data.py  embedding_model.h5  kmeans.pkl  main.py  model.py  pca.pkl  pyproject.toml
frontend/app/: layout.tsx  page.tsx
nextjs/: package-lock.json
